[gd_scene load_steps=3 format=3 uid="uid://bqrutnhiak7b0"]

[ext_resource type="Script" path="res://HurtBox.gd" id="1_cdgbg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7lnar"]
radius = 3.0

[node name="HurtBox" type="Area2D"]
script = ExtResource("1_cdgbg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7lnar")

[node name="Timer" type="Timer" parent="."]

[connection signal="invincibility_ended" from="." to="." method="_on_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
